; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_bulkcopy_start.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_bulkcopy_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_msg = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_msg_bulkcopy_start(%struct.nn_msg* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_msg*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_msg* %0, %struct.nn_msg** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %6 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %5, i32 0, i32 2
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @nn_chunkref_bulkcopy_start(i32* %6, i32 %7)
  %9 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %10 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %9, i32 0, i32 1
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @nn_chunkref_bulkcopy_start(i32* %10, i32 %11)
  %13 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %14 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %13, i32 0, i32 0
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @nn_chunkref_bulkcopy_start(i32* %14, i32 %15)
  ret void
}

declare dso_local i32 @nn_chunkref_bulkcopy_start(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
